--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+archive/*
+data/*
+dist/*
+db
+.DS_Store
+!.gitkeep
+
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
 
@@ -101,7 +108,6 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
