--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -115,17 +115,9 @@ jobs:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
           tags: ghcr.io/${{ github.repository }}/tweetarchiver:latest
-          cache-from: type=local,src=/tmp/.buildx-cache-new
-          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-      -
-        # Temp fix
-        # https://github.com/docker/build-push-action/issues/252
-        # https://github.com/moby/buildkit/issues/1896
-        name: Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
-
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          
   create_release:
     name: Create Release
     runs-on: ubuntu-latest
